test/parallel/taskPar/vass/errorFieldMethodInWithClause.good
errorFieldMethodInWithClause.chpl:22: error: cannot reference a field or function 'myField' in a with-clause of this cobegin block
errorFieldMethodInWithClause.chpl:16: In method 'test':
errorFieldMethodInWithClause.chpl:26: error: cannot reference a field or function 'myProcc' in a with-clause of this cobegin block
errorFieldMethodInWithClause.chpl:30: error: cannot reference a field or function 'ourProc' in a with-clause of this cobegin block
errorFieldMethodInWithClause.chpl:30: error: cannot reference a field or function 'ourIter' in a with-clause of this cobegin block
errorFieldMethodInWithClause.chpl:35: error: cannot reference a field or function 'myField' in a with-clause of this coforall loop
errorFieldMethodInWithClause.chpl:37: error: cannot reference a field or function 'myProcc' in a with-clause of this coforall loop
errorFieldMethodInWithClause.chpl:39: error: cannot reference a field or function 'ourProc' in a with-clause of this coforall loop
errorFieldMethodInWithClause.chpl:39: error: cannot reference a field or function 'ourIter' in a with-clause of this coforall loop
errorFieldMethodInWithClause.chpl:43: error: cannot reference a field or function 'myField' in a with-clause of this begin block
errorFieldMethodInWithClause.chpl:45: error: cannot reference a field or function 'myProcc' in a with-clause of this begin block
errorFieldMethodInWithClause.chpl:47: error: cannot reference a field or function 'ourProc' in a with-clause of this begin block
errorFieldMethodInWithClause.chpl:47: error: cannot reference a field or function 'ourIter' in a with-clause of this begin block
